K8S/prometheus-pushgateway/ingress-test.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "pushgateway"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "pushgateway.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "pushgateway"
                port:
                  number: 9092
